manual/testcase/Example/ERROR/MINMAX/Untitled Folder/minmax_trans_2_not_equiv.pres

 Number of Places = 6
 Place : p1 
 Associated variable : a


 Place : p2 
 Associated variable : b


 Place : p3 
 Associated variable : c


 Place : p4 
 Associated variable : b


 Place : p5 
 Associated variable : d


 Number of Transitions = 4
 Transition : t124
 Transition function :b=a-1
 Guard conditions :n_g
 Printing Preset list(1) :p1 
 Printing Postset list(1) : p2 p4 


 Transition : t23
 Transition function :c=b-2
 Guard conditions :n_g
 Printing Preset list(1) :p2 
 Printing Postset list(1) : p3 


 Transition : t45
 Transition function :d=b-2
 Guard conditions :n_g
 Printing Preset list(2) :p4 
 Printing Postset list(3) : p5 


 Transition : t356
 Transition function :e=c+d
 Guard conditions :n_g
 Printing Preset list(2) :p3 p5 
 Printing Postset list(2) : p6 



 Printing initial marking ... 
 Total number of initially marked places : 1
 Initially marked places are : p1

